[package]
name = "rusty-ex"
version = "0.1.0-nightly-2024-12-01"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-rusty-ex"

[[bin]]
name = "rusty-ex-driver"

[[bin]]
name = "deserializer-merger"

[features]
default = []
test-mode = []

[dependencies]
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# NOTE: this rev is the commit in which we implemented the `weighted closeness` algorithm
# rustworkx-core = "0.16.0"
rustworkx-core = { git = "https://github.com/Qiskit/rustworkx.git", rev = "286a719db1ecb40d9a6faf6215f13576bc1d1b91" }
petgraph = { version = "0.7.1", features = ["serde-1"] }
log = "0.4"
cargo_metadata = "0.14"
serde_json = "1"
rustc_tools_util = "0.1"
linked_hash_set = "0.1.4"
rustsat-minisat = "0.4.3"
rustsat = "0.6.3"
# rustc_plugin = "0.10.0-nightly-2024-05-20"
# rustc-instrument = { path = "../rustc-instrument/rustc-instrument" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
toml = "0.7"
